Revision history for perl distribution Convos

6.52 Not Released
 - Fix not translating "" - the .po header

6.51 2022-01-02T08:55:00+0900
 - Fix GET /api/files when there are no files

6.50 2021-12-31T17:59:00+0900
 - Safari does not support look-behind

6.49 2021-12-31T16:43:00+0900
 - Fix XSS vulnerability in links
   Contributor: Pocas
   Reference: https://huntr.dev/bounties/4532a0ac-4e7c-4fcf-9fe3-630e132325c0
 - Add EXPERIMENTAL support for IRC color and text formatting #281 #600
 - Changed to hiding "https://" from generated links, but keep "http://"
 - Changed I18N.md() to be understand recursive tags #601
 - Updated Italian translation #654
   Contributor: SerHack
 - Replaced CONVOS_DEBUG=1 with CONVOS_LOG_LEVEL=trace

6.48 2021-12-29T19:40:00+0900
 - Fix catching invalid nick change #628
 - Fix showing tooltips on desktop
 - Add notification sound #589
   Contributor: egomassive
   Reference: https://freesound.org/people/egomassive/sounds/536748/
 - Add more rules for files with Content-Disposition
   Contributor: Pocas
   Reference: https://huntr.dev/bounties/ae424798-de01-4972-b73b-2db674f82368/

6.47 2021-12-28T12:32:00+0900
 - Add more rules for potentially evil svg files
   Contributor: KhanhCM
   Reference: https://huntr.dev/bounties/142c3dcc-a882-4799-949b-520be0a4d144

6.46 2021-12-28T11:27:00+0900
 - Using WHOIS instead of ISON to check if a user is online #360
 - Presenting WHOIS information in conversation #360
 - Fix joining already joined conversations

6.45 2021-12-27T22:17:00+0900
 - Add "Check for updates" button to Settings page #585
 - Trying to fix connect queue issues with Convos::Util::Queue
   * Removed connect queue logic from Convos::Core
 - Removed "queued" connection state
 - Changing the connection URL username or password will also cause a reconnect

6.44 2021-12-23T16:17:00+0900
 - Fix SASL EXTERNAL authentication

6.43 2021-12-23T14:29:00+0900
 - Add certificate fingerprint to connection form, when chosing "SASL External"